# CPP_Serial_Client

./: CMakeLists.txt  README.md
CPP_Serial_Client/: CMakeLists.txt  CPP_Serial_Client.cpp  CPP_Serial_Client.h  main.cpp
CPP_Serial_Client/Source/: Serial.cpp  Serial.h  Serial_Info.h  serial_client.cpp  serial_client.h
